tests/miz/fail/overload/fail_overload_hidden_coercion_001.miz
definition
  func coerce(set) -> object;
  func f(set) -> set;
  func f(object) -> set;
end;

theorem
  f(coerce({})) = f(coerce({}));
proof
end;
